# BlazeBall

./: .gitignore  CMakeLists.txt  DIF_MB_SPEC.rtf  LICENSE  README.md
DifViewer/: main.c  main.cpp
DifViewer.xcodeproj/: project.pbxproj
DifViewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DifViewer/base/: color.h  io.c  io.cpp  io.h  jpegsupport.c  math.c  math.cpp  math.h  mngsupport.c  mngsupport.h  point2.h  point3.h  point3F.h  point4.h  ray.h  types.h
DifViewer/bitmap/: jpegsupport.c  jpegsupport.cpp  jpegsupport.h  mngsupport.c  mngsupport.cpp  mngsupport.h  texture.c  texture.cpp  texture.h
DifViewer/game/: physics.cpp  physics.h  sphere.cpp  sphere.h
DifViewer/objects/: aiSpecialNode.c  aiSpecialNode.cpp  aiSpecialNode.h  dif.c  dif.cpp  dif.h  forceField.c  forceField.cpp  forceField.h  gameEntity.c  gameEntity.cpp  gameEntity.h  interior.c  interior.cpp  interior.h  interiorPathFollower.c  interiorPathFollower.cpp  interiorPathFollower.h  pathedInterior.cpp  pathedInterior.h  staticMesh.cpp  staticMesh.h  trigger.c  trigger.cpp  trigger.h  vehicleCollision.c  vehicleCollision.cpp  vehicleCollision.h
DifViewer/physics/: physicsBody.cpp  physicsBody.h  physicsEngine.cpp  physicsEngine.h  physicsSphere.cpp
DifViewer/platform/: SDLEvent.cpp  SDLEvent.h  SDLWindow.cpp  SDLWindow.h  event.h  window.h
DifViewer/render/: interiorRender.c  interiorRender.cpp  material.cpp  material.h  scene.cpp  scene.h  shader.cpp  shader.h
DifViewer/shaders/: fragmentShader.glsl  interiorF.glsl  vertexShader.glsl
assets/: CUBE_AND_DUSTPARTICLE_LICENSE.txt  cube.dae  defaultConfig.txt  game.rcss  game.rml  menu.rcss  menu.rml
assets/materials/: materials_bowl.json
cmake/: dif.txt  epoxy.txt  jpeg.txt  mng.txt  tga.txt  zlib.txt
docs/: DIF_SUPPORT.md  resourceManagerDesign.txt
game/triggers/: helloWorldTrigger.cpp  helloWorldTrigger.h
genie/scripts/: bullet.lua  game.lua  genie.lua  glew.lua  glfw.lua  glfw3.lua  jpeg.lua  mng.lua
glm/: CMakeCache.txt
jpeg/jpeg.xcodeproj/: project.pbxproj
mng/mng.xcodeproj/: project.pbxproj
source/: main.cpp
source/base/: Tree.h  color.h  config.cpp  config.h  event.h  io.cpp  io.h  math.cpp  math.h  mathFunctions.cpp  mathFunctions.h  mathTypes.h  point2.h  point3.h  point4.h  ray.h  time.h  types.h
source/behaviors/: behavior.cpp  behavior.h  behaviorAPI.h  behaviorAbstractClassRep.cpp  behaviorAbstractClassRep.h  behaviorConcreteClassRep.h  triggerBehavior.cpp  triggerBehavior.h
source/bitmap/: jpegsupport.cpp  jpegsupport.h  mngsupport.cpp  mngsupport.h  texture.cpp  texture.h
source/game/: GameInterior.h  IRenderedObject.h  Shape.cpp  Shape.h  camera.cpp  camera.h  gameInterior.cpp  gameInterior.h  gameObject.cpp  gameObject.h  levelLoader.cpp  levelLoader.h  movement.h  particleEmitter.cpp  particleEmitter.h  renderedObject.cpp  renderedObject.h  scriptObject.cpp  scriptObject.h  shape.cpp  shape.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  trigger.cpp  trigger.h  world.cpp  world.h
source/graphics/: bitmapTexture.cpp  bitmapTexture.h  cubeMapFramebufferTexture.cpp  cubeMapFramebufferTexture.h  cubeMapTexture.cpp  cubeMapTexture.h  gfxTypes.h  gl.cpp  gl.h  glEmscripten.h  glImplementation.cpp  glImplementation.h  glMac.h  glMac.mm  graphicsDevice.cpp  graphicsDevice.h  indexBufferObject.cpp  indexBufferObject.h  shader.cpp  shader.h  shaderTranslator.cpp  shaderTranslator.h  texture.cpp  texture.h  util.h  vertexBufferObject.cpp  vertexBufferObject.h  vertexInputLayout.cpp  vertexInputLayout.h
source/gui/: guiDocument.cpp  guiDocument.h  renderInterface.cpp  renderInterface.h  systemInterface.cpp  systemInterface.h
source/levels/: bowl.json  level.json  test.json  walleyewarehouse.json
source/main/: gameState.cpp  gameState.h  main.cpp
source/network/: bitStream.h  charStream.h  client.cpp  client.h  clientConnection.cpp  clientConnection.h  netObject.cpp  netObject.h  network.h  networkHandler.cpp  networkHandler.h  server.cpp  server.h
source/objects/: aiSpecialNode.cpp  aiSpecialNode.h  dif.cpp  dif.h  forceField.cpp  forceField.h  gameEntity.cpp  gameEntity.h  interior.cpp  interior.h  interiorPathFollower.cpp  interiorPathFollower.h  pathedInterior.cpp  pathedInterior.h  staticMesh.cpp  staticMesh.h  trigger.cpp  trigger.h  vehicleCollision.cpp  vehicleCollision.h
source/physics/: physicsBody.cpp  physicsBody.h  physicsEngine.cpp  physicsEngine.h  physicsInterior.cpp  physicsInterior.h  physicsRigidBody.cpp  physicsRigidBody.h  physicsSphere.cpp  physicsSphere.h  physicsTrigger.cpp  physicsTrigger.h
source/platform/: event.h  event.h.rej  network.h  platform.h  platformEvent.h  platformGL.h  platformTimer.cpp  platformTimer.h  platformWindow.h  timer.cpp  timer.h  window.h
source/platformGLFW/: GLFWConfig.h  GLFWEvent.cpp  GLFWEvent.h  GLFWTimer.h  GLFWWindow.cpp  GLFWWindow.h
source/platformSDL/: SDLConfig.h  SDLEvent.cpp  SDLEvent.h  SDLTimer.h  SDLWindow.cpp  SDLWindow.h
source/render/: interiorRender.cpp  material.cpp  material.h  materialManager.cpp  materialManager.h  modelManager.cpp  modelManager.h  renderInfo.h  renderWorld.cpp  renderWorld.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shaderImpl.cpp  triggerData.h  util.h
source/resource/: IResource.h  interiorResource.cpp  interiorResource.h  materialResource.cpp  materialResource.h  materialResourceFile.h  meshResource.cpp  meshResource.h  resourceLoader.cpp  resourceLoader.h  shaderResource.cpp  shaderResource.h  shapeResource.cpp  shapeResource.h
source/script/: baseFunctions.cpp  scriptClass.h  scriptEngine.cpp  scriptEngine.h  scriptFunction.h  scriptTemplates.h  scriptUtil.h
source/scriptEngine/: abstractClassRep.cpp  abstractClassRep.h  concreteClassRep.h  scriptAPI.cpp  scriptAPI.h  scriptEngine.cpp  scriptEngine.h  scriptEngine.inl  scriptFunctions.h  scriptMath.h  scriptTypes.inl
source/scripting/: basicScriptFunctions.cpp  glmSupport.cpp  objectWrap.h  scriptEngine.cpp  scriptEngine.h  v8utils.cpp  v8utils.h
source/scripts/: main.as  main.chai  main.js  test.js  (+2 more)
(+123 files in other folders)
